--- a/fly.toml
+++ b/fly.toml
@@ -1,14 +1,22 @@
-# fly.io configuration for static site
-app = "qustin-blog"
-primary_region = "iad"
+# fly.toml app configuration file generated for qustin-blog on 2025-11-17T11:46:32-05:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'qustin-blog'
+primary_region = 'iad'
 
 [build]
 
 [http_service]
   internal_port = 80
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
